[gd_scene load_steps=2 format=3 uid="uid://lp0cg4rewg67"]

[ext_resource type="Script" uid="uid://c3o8ulwc166h1" path="res://ui/pause_menu/PauseMenu.gd" id="1_5hbt6"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5hbt6")

[node name="Background" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Background/VBoxContainer"]
layout_mode = 2

[node name="ResumeButton" type="Button" parent="Background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RESUME"

[node name="SaveButton" type="Button" parent="Background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SAVE"

[node name="QuitButton" type="Button" parent="Background/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "QUIT"
